added project and blog details

--- a/web/myapp/views/blog.hbs
+++ b/web/myapp/views/blog.hbs
@@ -20,9 +20,9 @@
 							<div>
 								<p>{{description}}</p>
 							</div>
-							<a href="{{link}}" class="btn btn-primary">View Details</a>
+							<a href="/blog/{{_id}}" class="btn btn-primary">View Details</a>
 						</figcaption>			
-					</figure>
+					</figure>   
 				</div>
 			</div>
         {{/each}}
