--- a/web/myapp/views/about.hbs
+++ b/web/myapp/views/about.hbs
@@ -1,7 +1,8 @@
 <div class="container" style="margin-top:100px">
     <div class="row">
-        <!--sidebar-->        
-        <div class="col-md-3">
+        <!--sidebar-->  
+         {{>sidebar}}      
+        {{!-- <div class="col-md-3">
             <div class="sidebar">
             <div class="my-pic">
                 <img src="images/teertha.jpg" class="img-fluid side-pic">
@@ -31,7 +32,7 @@
                 </ul>
             </div>
             </div>
-        </div>
+        </div> --}}
         
 
         <div class="col-md-9">           
