--- a/web/myapp/views/blog-details.hbs
+++ b/web/myapp/views/blog-details.hbs
@@ -1,6 +1,6 @@
-<div class="container" style="margin-top:79px">
+<div class="container-fluid" style="margin-top:79px">
     {{!-- <a href="/projects">Projects</a><br> --}}
-    <div class="row">
+    <div class="row container">
         <div class="col-md-3">
           <div class="sidebar">
             <h3 class="title" style="font-size: 20px;">Link</h3>
@@ -26,28 +26,30 @@
                 </ul>
             </div>
           </div>
-      </div>  
+      </div> 
 
-  <div class="col-md-9">
+      <div class="col-md-9">
    <nav aria-label="breadcrumb">
                 <ol class="breadcrumb">
                     <li class="breadcrumb-item bc-item"><a href="/">Home</a></li>
-                    <li class="breadcrumb-item bc-item"><a href="/projects">Projects</a></li>
-                    <li class="breadcrumb-item" aria-current="page">Projects deatail</li>
+                    <li class="breadcrumb-item bc-item"><a href="/blog">Blog</a></li>
+                    <li class="breadcrumb-item" aria-current="page">Blog detail</li>
                 </ol>
   </nav>
-      <h1>{{data.title}}</h1>
-          <p>{{data.description}}</p>
+
+   <h1>{{post.title}}</h1>
+          <p>{{post.content}}</p>
+          
       <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
           <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="{{data.image}}" class="img-thumbnail"/>
+                <img src="{{post.image}}" class="img-thumbnail"/>
               </div>
               <div class="carousel-item">
-                <img src="{{data.image}}" class="img-thumbnail"/>
+                <img src="{{post.image}}" class="img-thumbnail"/>
               </div>
               <div class="carousel-item">
-                <img src="{{data.image}}" class="img-thumbnail"/>
+                <img src="{{post.image}}" class="img-thumbnail"/>
               </div>
           </div>
             <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
@@ -59,6 +61,5 @@
               <span class="sr-only">Next</span>
             </a>
       </div>    
-  </div> 
-  </div>
-</div>
+    </div>
+</div>       
