--- a/web/myapp/views/index.hbs
+++ b/web/myapp/views/index.hbs
@@ -125,7 +125,7 @@
     </div>
 </div>
 <div class="row">
-    {{#each posts}}
+    {{#each post}}
             <div class="col-md-4">				
 				<div class="grid">                    
 					<figure class="effect-julia">
