--- a/web/myapp/views/layout.hbs
+++ b/web/myapp/views/layout.hbs
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html>
-  <head>
+  <html xmlns="http://www.w3.org/1999/xhtml">
+<head>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <!-- Mobile Specific -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title>{{title}}</title>
     <link rel="icon" href="images/favicon.png" sizes="32x32" type="image/png">
     <link rel='stylesheet' href='/stylesheets/style.css' />
