--- a/web/myapp/public/stylesheets/style.css
+++ b/web/myapp/public/stylesheets/style.css
@@ -64,6 +64,15 @@ li.nav-item.active a.nav-link{
 .sub-heading{
 	padding: 30px 0px;
 }
+.newsletter h3{
+	margin:5px 0px;
+}
+.newsletter .button-gredient{
+	margin:5px 20px;
+}
+.newsletter input{
+	padding: 5px 20px;
+}
 .button, .button-gredient {
 	background-color: #ffffff;
 	border-radius: 50px;
