--- a/web/myapp/views/index.hbs
+++ b/web/myapp/views/index.hbs
@@ -2,7 +2,7 @@
     <div class="content">
         <div class="container" style="margin-top:80px">
             <div class="row">
-                <div class="col-md-7 col-sm-12 col-xs-12">
+                <div class="col-md-7 col-sm-12 col-xs-12 order-sm-12">
                     <div class="info">
                         <h3 class="name">Hi, I'm Mr.Teertha</h3>
                         <p>ENTREPRENEUR</p>
@@ -49,7 +49,7 @@
                         </ul>
                     </div>
                 </div>
-                <div class="col-md-5 col-sm-12 col-xs-12">
+                <div class="col-md-5 col-sm-12 col-xs-12 order-sm-1">
                     <div class="mypic">
                         <img class="rounded-circle img-responsive" src="images/teertha.jpg">
                     </div>
@@ -58,22 +58,22 @@
         </div>
     </div>
 </div>
-<div class="newsletter">
+<div class="newsletter text-center">
     <div class="container">
         <div class="row">
             <div class="col-md-6">
                 <h3>Subscribe to my Newsletter</h3>
             </div>
-            <div class="col-md-6">
-                 <form class="form-inline" action="/subscribe" method="POST">
+            <div class="col-md-6 text-center">
+                 <form class="text-center" action="/subscribe" method="POST">
                     {{!-- <div class="form-group mx-sm-3 mb-2" style="width: 70%;">
                         <label for="Email" class="sr-only">Email</label>
                         <input type="email" type="email" name="email" id="email" class="form-control" placeholder="Email address"
                            value="{{email}}"  value="" style="width: 100%;">
                     </div>
                     <button type="submit" class="button mb-2">Subscribe</button> --}}
-                  <input type="email" name="email">
-                  <button>Subscribe</button>  
+                  <input type="email" name="email" placeholder="Email address">
+                  <button class="button-gredient">Subscribe</button>  
                   {{#if success}}
                     <div class="alert alert-sucess" role="alert">
                         Thank you!..Your Email is Subscribed.
@@ -133,7 +133,7 @@
 						<figcaption>
 							<h2>{{title}}</h2>
 							<div>
-								<p>{{content}}</p>
+								<p>{{description}}</p>
 							</div>
 							<a href="{{_id}}" class="btn btn-primary">View Details</a>
 						</figcaption>			
