--- a/web/myapp/views/index.hbs
+++ b/web/myapp/views/index.hbs
@@ -2,7 +2,7 @@
     <div class="content">
         <div class="container" style="margin-top:80px">
             <div class="row">
-                <div class="col-md-7 col-sm-12 col-xs-12 order-sm-12">
+                <div class="col-md-7 col-sm-12 col-xs-12">
                     <div class="info">
                         <h3 class="name">Hi, I'm Mr.Teertha</h3>
                         <p>ENTREPRENEUR</p>
@@ -49,7 +49,7 @@
                         </ul>
                     </div>
                 </div>
-                <div class="col-md-5 col-sm-12 col-xs-12 order-sm-1">
+                <div class="col-md-5 col-sm-12 col-xs-12">
                     <div class="mypic">
                         <img class="rounded-circle img-responsive" src="images/teertha.jpg">
                     </div>
