udated the breadcrumb

--- a/web/myapp/views/partials/sidebar.hbs
+++ b/web/myapp/views/partials/sidebar.hbs
@@ -1,4 +1,4 @@
-<div class="col-md-3">
+<div class="col-md-3" style="margin-bottom: 30px;">
             <div class="my-pic">
                 <img src="images/teertha.jpg" class="img-fluid side-pic">
             </div>
