--- a/web/myapp/views/project-detail.hbs
+++ b/web/myapp/views/project-detail.hbs
@@ -33,7 +33,7 @@
                 <ol class="breadcrumb">
                     <li class="breadcrumb-item bc-item"><a href="/">Home</a></li>
                     <li class="breadcrumb-item bc-item"><a href="/projects">Projects</a></li>
-                    <li class="breadcrumb-item" aria-current="page">Projects deatail</li>
+                    <li class="breadcrumb-item" aria-current="page">{{data.title}}</li>
                 </ol>
   </nav>
       <h1>{{data.title}}</h1>
